syntax = "proto3";

package pdm;



// Interface exported by the server.
service DataMover {
    rpc Register(Endpoint) returns (Handle) {}
    rpc GetActions(Handle) returns (stream ActionItem) {}
    rpc StatusStream(stream ActionStatus) returns (Empty) {}
}

message Endpoint {
    uint32 archive = 1;
}

message Handle {
    uint64 id = 1;
}

message ActionItem {
    uint64 cookie = 1;
    uint32 op = 2;
    string primary_fid = 3;
    string write_fid = 4;
    uint64 offset = 5;
    uint64 length = 6;
    bytes data = 7;
}

message ActionStatus {
    uint64 cookie = 1;
    bool  completed = 2;
    int32  error = 3;
    uint64 offset = 4;
    uint64  length = 5;
    Handle handle = 6;
}


message Empty { };

 
